--- a/index.html
+++ b/index.html
@@ -30,11 +30,43 @@
                 <li>interactivity</li>
             </ul>
         </ul>
+
         <h2>Vocabulary & Syntax</h2>
+
         <li>elements have the following syntax: &lt;tag attribute="value"&gt;content&lt;/tag&gt;</li>
 
 
 
+
+        <h2>Block vs. Inline</h2>
+
+        <li>block-level elements always starts on a new line and take up the full width available</li>
+        <li>inline-elements do not start on a new line and only takes up as much width as necessary</li>
+
+
+
+        <h2>Block-level elements</h2>
+
+        <li>heading: &lt;h1&gt;&lt;/h1&gt; through &lt;h6&gt;&lt;/h6&gt;</li>
+        <li>horizontal rule (line): &lt;hr&gt;</li>
+        <li>paragraph: &lt;p&gt;&lt;/p&gt;</li>
+        <li>ordered list: &lt;ol&gt;&lt;/ol&gt;</li>
+        <li>unordered list: &lt;ul&gt;&lt;/ul&gt;</li>
+        <li>list item: &lt;li&gt;&lt;/li&gt;</li>
+        <li>form: &lt;form&gt;&lt;/form&gt;</li>
+        <li>div (container): &lt;div&gt;&lt;/div&gt;</li>
+
+
+
+        <h2>Inline Elements</h2>
+
+        <li>line break: &lt;br&gt;</li>
+        <li>image: &lt;img src="URL"&gt;</li>
+        <li>link (anchor): &lt;a href="URL"&gt;&lt;/a&gt;</li>
+        <li>code: &lt;code&gt;&lt;/code&gt;</li>
+        <li>bold: &lt;strong&gt;&lt;/strong&gt;</li>
+        <li>italicized: &lt;em&gt;&lt;/em&gt;</li>
+        <li>span (container): &lt;span&gt;&lt;/span&gt;</li>
 
     </div>
 </body>
