--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <h2>Vocabulary & Syntax</h2>
 
-        <li>elements have the following syntax: &lt;tag attribute="value"&gt;content&lt;/tag&gt;</li>
+        <li>elements have the following syntax: <code>&lt;tag attribute="value"&gt;content&lt;/tag&gt;</code></li>
 
 
 
