--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <h2>Vocabulary & Syntax</h2>
 
-        <li>elements have the following syntax: <code>&lt;tag attribute="value"&gt;content&lt;/tag&gt;</code></li>
+        <li>elements have the following syntax: <code>&lt;tag attribute="value"&gt;</code>content<code>&lt;/tag&gt;</code></li>
 
-
+<code></code>
 
 
         <h2>Block vs. Inline</h2>
@@ -47,26 +47,26 @@
 
         <h2>Block-level elements</h2>
 
-        <li>heading: &lt;h1&gt;&lt;/h1&gt; through &lt;h6&gt;&lt;/h6&gt;</li>
-        <li>horizontal rule (line): &lt;hr&gt;</li>
-        <li>paragraph: &lt;p&gt;&lt;/p&gt;</li>
-        <li>ordered list: &lt;ol&gt;&lt;/ol&gt;</li>
-        <li>unordered list: &lt;ul&gt;&lt;/ul&gt;</li>
-        <li>list item: &lt;li&gt;&lt;/li&gt;</li>
-        <li>form: &lt;form&gt;&lt;/form&gt;</li>
-        <li>div (container): &lt;div&gt;&lt;/div&gt;</li>
+        <li>heading: <code>&lt;h1&gt;&lt;/h1&gt;</code> through <code>&lt;h6&gt;&lt;/h6&gt;</code></li>
+        <li>horizontal rule (line): <code>&lt;hr&gt;</code></li>
+        <li>paragraph: <code>&lt;p&gt;&lt;/p&gt;</code></li>
+        <li>ordered list: <code>&lt;ol&gt;&lt;/ol&gt;</code></li>
+        <li>unordered list: <code>&lt;ul&gt;&lt;/ul&gt;</code></li>
+        <li>list item:<code>&lt;li&gt;&lt;/li&gt;</code> </li>
+        <li>form:<code> &lt;form&gt;&lt;/form&gt;</code></li>
+        <li>div (container): <code>&lt;div&gt;&lt;/div&gt;</code></li>
 
 
 
         <h2>Inline Elements</h2>
 
-        <li>line break: &lt;br&gt;</li>
-        <li>image: &lt;img src="URL"&gt;</li>
-        <li>link (anchor): &lt;a href="URL"&gt;&lt;/a&gt;</li>
-        <li>code: &lt;code&gt;&lt;/code&gt;</li>
-        <li>bold: &lt;strong&gt;&lt;/strong&gt;</li>
-        <li>italicized: &lt;em&gt;&lt;/em&gt;</li>
-        <li>span (container): &lt;span&gt;&lt;/span&gt;</li>
+        <li>line break:<code>&lt;br&gt;</code> </li>
+        <li>image: <code>&lt;img src="URL"&gt;</code></li>
+        <li>link (anchor): <code>&lt;a href="URL"&gt;&lt;/a&gt;</code></li>
+        <li>code: <code>&lt;code&gt;&lt;/code&gt;</code></li>
+        <li>bold: <code>&lt;strong&gt;&lt;/strong&gt;</code></li>
+        <li>italicized:<code>&lt;em&gt;&lt;/em&gt;</code> </li>
+        <li>span (container): <code>&lt;span&gt;&lt;/span&gt;</code></li>
 
     </div>
 </body>
