--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
         <li>elements have the following syntax: <code>&lt;tag attribute="value"&gt;</code>content<code>&lt;/tag&gt;</code></li>
 
-<code></code>
 
 
         <h2>Block vs. Inline</h2>
@@ -47,26 +46,26 @@
 
         <h2>Block-level elements</h2>
 
-        <li>heading: <code>&lt;h1&gt;&lt;/h1&gt;</code> through <code>&lt;h6&gt;&lt;/h6&gt;</code></li>
-        <li>horizontal rule (line): <code>&lt;hr&gt;</code></li>
-        <li>paragraph: <code>&lt;p&gt;&lt;/p&gt;</code></li>
-        <li>ordered list: <code>&lt;ol&gt;&lt;/ol&gt;</code></li>
-        <li>unordered list: <code>&lt;ul&gt;&lt;/ul&gt;</code></li>
-        <li>list item:<code>&lt;li&gt;&lt;/li&gt;</code> </li>
-        <li>form:<code> &lt;form&gt;&lt;/form&gt;</code></li>
-        <li>div (container): <code>&lt;div&gt;&lt;/div&gt;</code></li>
+        <li><strong></strong>heading: <code>&lt;h1&gt;&lt;/h1&gt;</code> through <code>&lt;h6&gt;&lt;/h6&gt;</code></li>
+        <li><strong>horizontal rule (line): </strong><code>&lt;hr&gt;</code></li>
+        <li><strong>paragraph: </strong><code>&lt;p&gt;&lt;/p&gt;</code></li>
+        <li><strong>ordered list: </strong><code>&lt;ol&gt;&lt;/ol&gt;</code></li>
+        <li><strong>unordered list: </strong><code>&lt;ul&gt;&lt;/ul&gt;</code></li>
+        <li><strong>list item: </strong><code>&lt;li&gt;&lt;/li&gt;</code> </li>
+        <li><strong>form: </strong><code> &lt;form&gt;&lt;/form&gt;</code></li>
+        <li><strong>div (container): </strong><code>&lt;div&gt;&lt;/div&gt;</code></li>
 
 
 
         <h2>Inline Elements</h2>
 
-        <li>line break:<code>&lt;br&gt;</code> </li>
-        <li>image: <code>&lt;img src="URL"&gt;</code></li>
-        <li>link (anchor): <code>&lt;a href="URL"&gt;&lt;/a&gt;</code></li>
-        <li>code: <code>&lt;code&gt;&lt;/code&gt;</code></li>
-        <li>bold: <code>&lt;strong&gt;&lt;/strong&gt;</code></li>
-        <li>italicized:<code>&lt;em&gt;&lt;/em&gt;</code> </li>
-        <li>span (container): <code>&lt;span&gt;&lt;/span&gt;</code></li>
+        <li><strong>line break:</strong><code>&lt;br&gt;</code> </li>
+        <li><strong>image: </strong><code>&lt;img src="URL"&gt;</code></li>
+        <li><strong>link (anchor): </strong><code>&lt;a href="URL"&gt;&lt;/a&gt;</code></li>
+        <li><strong>code: </strong><code>&lt;code&gt;&lt;/code&gt;</code></li>
+        <li><strong>bold: </strong><code>&lt;strong&gt;&lt;/strong&gt;</code></li>
+        <li><strong>italicized:</strong><code>&lt;em&gt;&lt;/em&gt;</code> </li>
+        <li><strong>span (container): </strong><code>&lt;span&gt;&lt;/span&gt;</code></li>
 
     </div>
 </body>
