--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <h2>Block-level elements</h2>
 
-        <li><strong></strong>heading: <code>&lt;h1&gt;&lt;/h1&gt;</code> through <code>&lt;h6&gt;&lt;/h6&gt;</code></li>
+        <li><strong>heading: </strong><code>&lt;h1&gt;&lt;/h1&gt;</code><strong>through</strong><code>&lt;h6&gt;&lt;/h6&gt;</code></li>
         <li><strong>horizontal rule (line): </strong><code>&lt;hr&gt;</code></li>
         <li><strong>paragraph: </strong><code>&lt;p&gt;&lt;/p&gt;</code></li>
         <li><strong>ordered list: </strong><code>&lt;ol&gt;&lt;/ol&gt;</code></li>
@@ -59,12 +59,12 @@
 
         <h2>Inline Elements</h2>
 
-        <li><strong>line break:</strong><code>&lt;br&gt;</code> </li>
+        <li><strong>line break: </strong><code>&lt;br&gt;</code> </li>
         <li><strong>image: </strong><code>&lt;img src="URL"&gt;</code></li>
         <li><strong>link (anchor): </strong><code>&lt;a href="URL"&gt;&lt;/a&gt;</code></li>
         <li><strong>code: </strong><code>&lt;code&gt;&lt;/code&gt;</code></li>
         <li><strong>bold: </strong><code>&lt;strong&gt;&lt;/strong&gt;</code></li>
-        <li><strong>italicized:</strong><code>&lt;em&gt;&lt;/em&gt;</code> </li>
+        <li><strong>italicized: </strong><code>&lt;em&gt;&lt;/em&gt;</code> </li>
         <li><strong>span (container): </strong><code>&lt;span&gt;&lt;/span&gt;</code></li>
 
     </div>
