--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <h2>Block-level elements</h2>
 
-        <li><strong>heading: </strong><code>&lt;h1&gt;&lt;/h1&gt;</code><strong>through</strong><code>&lt;h6&gt;&lt;/h6&gt;</code></li>
+        <li><strong>heading: </strong><code>&lt;h1&gt;&lt;/h1&gt;</code>through<code>&lt;h6&gt;&lt;/h6&gt;</code></li>
         <li><strong>horizontal rule (line): </strong><code>&lt;hr&gt;</code></li>
         <li><strong>paragraph: </strong><code>&lt;p&gt;&lt;/p&gt;</code></li>
         <li><strong>ordered list: </strong><code>&lt;ol&gt;&lt;/ol&gt;</code></li>
